first slide mods and new top left logo

--- a/Smarty/HTML_BS4/index-onepage-construction.html
+++ b/Smarty/HTML_BS4/index-onepage-construction.html
@@ -235,7 +235,7 @@
 						<!-- SLIDE  -->
 						<li data-transition="parallaxtobottom" data-slotamount="7" data-masterspeed="600"  data-saveperformance="off"  data-title="Architectural View">
 							<!-- MAIN IMAGE -->
-							<img src="demo_files/images/yellow-min.jpg"  alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
+							<img src="demo_files/images/RE1.jpeg"  alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
 
 							<div class="tp-caption white_big skewfromleft tp-resizeme"
 								data-x="471"
@@ -249,7 +249,7 @@
 								data-endelementdelay="0.1"
 								data-endspeed="600"
 								style="z-index: 2; color:#fff; font-size:65px; line-height:85px; font-weight:bold; letter-spacing:0; text-shadow:none;">
-									Architectural View
+									Get ready to rise 
 							</div>
 
 							<div class="tp-caption content_text_center skewfromleft tp-resizeme"
@@ -279,7 +279,7 @@
 								data-endelementdelay="0.1"
 								data-endspeed="300"
 								style="z-index: 4;">
-									<img src="demo_files/images/thematics/construction/worker-min.png" alt="">
+									<img src="" alt="">
 							</div>
 
 							<div class="tp-caption skewfromleft tp-resizeme  un-button-2-lg"
