second and third slide

--- a/Smarty/HTML_BS4/index-onepage-construction.html
+++ b/Smarty/HTML_BS4/index-onepage-construction.html
@@ -194,7 +194,7 @@
 						<!-- SLIDE  -->
 						<li data-transition="parallaxtobottom" data-slotamount="7" data-masterspeed="600"  data-saveperformance="off"  data-title="Architectural View">
 							<!-- MAIN IMAGE -->
-							<img src="demo_files/images/RE1.jpeg"  alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
+							<img src="demo_files/images/RE3.jpg"  alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
 
 							<div class="tp-caption white_big skewfromleft tp-resizeme"
 								data-x="150"
@@ -225,7 +225,8 @@
 
 								style="z-index: 3; font-size:20px; color:#fff; font-weight:300; text-shadow:none;">
 								    Discover our new elevators systems designed with <br />
-									extremely advanced technology, quality and features.
+									extremely advanced technology, quality and features. <br />
+									__________________________________
 							</div>
 
 							<div class="tp-caption tp-fade"
@@ -242,7 +243,7 @@
 							</div>
 
 							<div class="tp-caption skewfromleft tp-resizeme  un-button-2-lg"
-								data-x="665"
+								data-x="150"
 								data-y="300" 
 								data-speed="300"
 								data-start="2500"
@@ -253,13 +254,13 @@
 								data-endelementdelay="0.1"
 								data-endspeed="300"
 
-								style="z-index: 5; max-width: auto; max-height: auto; white-space: nowrap;">
-									<a class="btn btn-warning btn-lg" href="#">OUR SERVICES &nbsp; <i class="fa fa-angle-right"></i></a>
+								style="z-index: 5; max-width: 10; max-height: 3; white-space: nowrap;">
+									<a class="btn btn-transparent btn-lg" href="#">OUR SERVICES &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 
 							<div class="tp-caption skewfromleft tp-resizeme  un-button-2-lg"
-								data-x="665"
-								data-y="670" 
+								data-x="150"
+								data-y="367" 
 								data-speed="300"
 								data-start="2500"
 								data-easing="Power3.easeInOut"
@@ -269,15 +270,15 @@
 								data-endelementdelay="0.1"
 								data-endspeed="300"
 
-								style="z-index: 5; max-width: auto; max-height: auto; white-space: nowrap;">
-									<a class="btn btn-warning btn-lg" href="#">OUR &nbsp; <i class="fa fa-angle-right"></i></a>
+								style="z-index: 5; max-width: 10; max-height: 3; white-space: nowrap;">
+									<a class="btn btn-transparent btn-lg" href="#">QUOTE REQUEST &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 						</li>
 
 						<!-- SLIDE  -->
 						<li data-transition="parallaxtotop" data-slotamount="7" data-masterspeed="300"  data-saveperformance="off" data-title="Bright Future">
 							<!-- MAIN IMAGE -->
-							<img src="demo_files/images/thematics/construction/slider_2-min.jpg" alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
+							<img src="demo_files/images/RE7.jpeg" alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
 
 							<div class="overlay dark-4"><!-- dark overlay [0 to 9 opacity] --></div>
 
@@ -293,8 +294,8 @@
 								data-endelementdelay="0.1"
 								data-endspeed="500"
 								style="z-index: 2; color:#fff; font-size:65px; line-height:85px; font-weight:bold; letter-spacing:0; text-shadow:none;">
-									Creating a Bright Future <br />
-									Together
+									Promotion of residential <br />
+									building service
 							</div>
 
 							<div class="tp-caption skewfromrightshort tp-resizeme"
@@ -309,13 +310,13 @@
 								data-endelementdelay="0.1"
 								data-endspeed="500"
 								style="z-index: 3; font-size:20px; color:#fff; font-weight:300; text-shadow:none;">
-									If you dream of designing a new home that takes full advantage, <br />
-									our team is the best in this field.
+									Take a look at our residential service detail page. <br />
+									______________________________
 							</div>
 
 							<div class="tp-caption sfb tp-resizeme"
 								data-x="50"
-								data-y="410" 
+								data-y="412" 
 								data-speed="500"
 								data-start="1500"
 								data-easing="Power3.easeIn"
@@ -325,89 +326,66 @@
 								data-endelementdelay="0.1"
 								data-endspeed="500"
 								style="z-index: 4; max-width: auto;">
-									<a class="btn btn-warning btn-lg" href="#">OUR SERVICES &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-danger btn-lg" href="#">SERVICE DETAILS &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 
-							<div class="tp-caption sfb tp-resizeme"
-								data-x="250"
-								data-y="410" 
+							<!-- SLIDE  -->
+						<li data-transition="parallaxtotop" data-slotamount="7" data-masterspeed="300"  data-saveperformance="off" data-title="Bright Future">
+							<!-- MAIN IMAGE -->
+							<img src="demo_files/images/RE1.jpeg" alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
+
+							<div class="overlay dark-4"><!-- dark overlay [0 to 9 opacity] --></div>
+
+							<div class="tp-caption font-roboto skewfromleft tp-resizeme"
+								data-x="50"
+								data-y="100" 
 								data-speed="500"
 								data-start="1500"
-								data-easing="Power3.easeInOut"
+								data-easing="Cubic.easeOut"
 								data-splitin="none"
 								data-splitout="none"
 								data-elementdelay="0.1"
 								data-endelementdelay="0.1"
 								data-endspeed="500"
-								style="z-index: 6; max-width: auto; max-height: auto; white-space: nowrap;">
-									<a class="btn btn-default btn-lg" href="#">GET A QUOTE &nbsp; <i class="fa fa-angle-right"></i></a>
-							</div>
-						</li>
-						<!-- SLIDE  -->
-						<li data-transition="parallaxtobottom" data-slotamount="7" data-masterspeed="600"  data-saveperformance="off"  data-title="Architectural View">
-							<!-- MAIN IMAGE -->
-							<img src="demo_files/images/yellow-min.jpg"  alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
-
-							<div class="tp-caption white_big skewfromleft tp-resizeme"
-								data-x="471"
-								data-y="100" 
-								data-speed="400"
-								data-start="1500"
-								data-easing="Power3.easeInOut"
-								data-splitin="words"
-								data-splitout="none"
-								data-elementdelay="0.1"
-								data-endelementdelay="0.1"
-								data-endspeed="600"
 								style="z-index: 2; color:#fff; font-size:65px; line-height:85px; font-weight:bold; letter-spacing:0; text-shadow:none;">
-									Architectural View
+									Promotion of corporate <br />
+									building service
 							</div>
 
-							<div class="tp-caption content_text_center skewfromleft tp-resizeme"
-								data-x="530"
-								data-y="195" 
-								data-speed="500"
-								data-start="2000"
-								data-easing="Power3.easeInOut"
-								data-splitin="none"
-								data-splitout="none"
-								data-elementdelay="0.1"
-								data-endelementdelay="0.1"
-								data-endspeed="600"
-
-								style="z-index: 3; font-size:20px; color:#fff; font-weight:300; text-shadow:none;">
-									If you dream of designing a new home that takes full advantage, <br />
-									our team is the best in this field.
-							</div>
-
-							<div class="tp-caption tp-fade"
-								data-x="left"
-								data-y="25" 
-								data-speed="300"
-								data-start="800"
-								data-easing="Power3.easeInOut"
-								data-elementdelay="0.1"
-								data-endelementdelay="0.1"
-								data-endspeed="300"
-								style="z-index: 4;">
-									<img src="demo_files/images/thematics/construction/worker-min.png" alt="">
-							</div>
-
-							<div class="tp-caption skewfromleft tp-resizeme  un-button-2-lg"
-								data-x="665"
+							<div class="tp-caption skewfromrightshort tp-resizeme"
+								data-x="50"
 								data-y="300" 
-								data-speed="300"
-								data-start="2500"
-								data-easing="Power3.easeInOut"
+								data-speed="500"
+								data-start="1000"
+								data-easing="easeInCirc"
 								data-splitin="none"
 								data-splitout="none"
 								data-elementdelay="0.1"
 								data-endelementdelay="0.1"
-								data-endspeed="300"
-
-								style="z-index: 5; max-width: auto; max-height: auto; white-space: nowrap;">
-									<a class="btn btn-warning btn-lg" href="#">OUR SERVICES &nbsp; <i class="fa fa-angle-right"></i></a>
+								data-endspeed="500"
+								style="z-index: 3; font-size:20px; color:#fff; font-weight:300; text-shadow:none;">
+									Take a look at our corporate service detail page. <br />
+									______________________________
 							</div>
+
+							<div class="tp-caption sfb tp-resizeme"
+								data-x="50"
+								data-y="412" 
+								data-speed="500"
+								data-start="1500"
+								data-easing="Power3.easeIn"
+								data-splitin="none"
+								data-splitout="none"
+								data-elementdelay="1"
+								data-endelementdelay="0.1"
+								data-endspeed="500"
+								style="z-index: 4; max-width: auto;">
+									<a class="btn btn-info btn-lg" href="#">SERVICE DETAILS &nbsp; <i class="fa fa-angle-right"></i></a>
+							</div>
+						
+
+						</li>
+						
 						</li>
 
 					</ul>
