--- a/Smarty/HTML_BS4/index-onepage-construction.html
+++ b/Smarty/HTML_BS4/index-onepage-construction.html
@@ -399,10 +399,10 @@
 
 
 			<!-- BUTTON CALLOUT -->
-			<a href="#" class="btn btn-xlg btn-primary fs-20 fullwidth m-0 rad-0 p-40">
+			<a href="#" class="btn btn-xlg btn-danger fs-20 fullwidth m-0 rad-0 p-40">
 				<span class="font-lato fs-30">
-					Did Smarty convinced you? 
-					<strong>Contact us &raquo;</strong>
+					Interested? 
+					<strong> Give us a call! &raquo;</strong>
 				</span>
 			</a>
 			<!-- /BUTTON CALLOUT -->
@@ -419,12 +419,12 @@
 								<span class="image-hover-icon image-hover-dark"><!-- image-hover-light | image-hover-dark -->
 									<i class="fa fa-vimeo-square"><!-- video icon --></i>
 								</span>
-								<img class="img-fluid" src="demo_files/images/thematics/construction/c3-min.jpg" alt="img" />
+								<img class="img-fluid" src="demo_files/images/RE11.jpg" alt="img" />
 							</a>
 
-							<h3 class="mt-10">The Green Building</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas metus nulla, commodo a sodales sed, dignissim pretium nunc. Nam et lacus neque.</p>
-							<a href="#" class="btn btn-default">THE BENEFITS</a>
+							<h3 class="mt-10">Our Projects and Awards</h3>
+							<p>Rocket Elevators is a company that won a numerous amount of awards! We also worked in many major projects.</p>
+							<a href="#" class="btn btn-info">READ MORE</a>
 						</div>
 
 						<div class="col-sm-4">
@@ -432,19 +432,26 @@
 								<span class="image-hover-icon image-hover-dark"><!-- image-hover-light | image-hover-dark -->
 									<i class="fa fa-youtube-square"><!-- video icon --></i>
 								</span>
-								<img class="img-fluid" src="demo_files/images/thematics/construction/c1-min.jpg" alt="img" />
+								<img class="img-fluid" src="demo_files/images/RE10.webp" alt="img" />
 							</a>
-							<h3 class="mt-10">Best House Renovation</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas metus nulla, commodo a sodales sed, dignissim pretium nunc. Nam et lacus neque.</p>
-							<a href="#" class="btn btn-default">READ MORE</a>
+							<h3 class="mt-10">Residential Buildings</h3>
+							<p>Our company offers many different types of services, you can read more about our residential buildings assistance right down below!</p>
+							<a href="#" class="btn btn-info">READ MORE</a>
 						</div>
 
 						<div class="col-sm-4">
-							<img class="img-fluid" src="demo_files/images/thematics/construction/c2-min.jpg" alt="img" />
-							<h3 class="mt-10">The Effective Teamwork</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas metus nulla, commodo a sodales sed, dignissim pretium nunc. Nam et lacus neque.</p>
-							<a href="#" class="btn btn-default">READ MORE</a>
+							<a class="image-hover lightbox" href="https://www.youtube.com/watch?v=ZhCyoDlltbo" data-plugin-options='{"type":"iframe"}'>
+								<span class="image-hover-icon image-hover-dark"><!-- image-hover-light | image-hover-dark -->
+									<i class="fa fa-youtube-square"><!-- video icon --></i>
+								</span>
+								<img class="img-fluid" src="demo_files/images/RE9.jpg" alt="img" />
+							</a>
+							<h3 class="mt-10">Corporate Buildings</h3>
+							<p>Our company offers many different types of services, you can read more about our corporate buildings assistance right down below!</p>
+							<a href="#" class="btn btn-info">READ MORE</a>
 						</div>
+
+						
 
 					</div>
 
@@ -456,16 +463,16 @@
 
 
 			<!-- Parallax -->
-			<section class="parallax parallax-1" style="background-image: url('demo_files/images/1200x800/34-min.jpg');">
+			<section class="parallax parallax-1" style="background-image: url('demo_files/images/RE6.jpg');">
 				<div class="overlay dark-5"><!-- dark overlay [1 to 9 opacity] --></div>
 
 				<div class="container">
 
 					<div class="text-center">
-						<h2 class="fs-40 fw-300">Contractor &amp; Construction Since 1982</h2>
-						<a class="btn btn-default btn-lg" href="#">GET A QUOTE <i class="fa fa-angle-right"></i></a> 
+						<h2 class="fs-40 fw-300"> Elevators for Innovative Buildings Since 1976</h2>
+						<a class="btn btn-info btn-lg" href="#">REQUEST A QUOTE <i class="fa fa-angle-right"></i></a> 
 						&nbsp; OR &nbsp; 
-						<a class="btn btn-warning btn-lg" href="#">OUR SERVICES <i class="fa fa-angle-right"></i></a>
+						<a class="btn btn-danger btn-lg" href="#">CONTACT US<i class="fa fa-angle-right"></i></a>
 					</div>
 
 				</div>
@@ -811,25 +818,25 @@
 					<div class="owl-carousel text-center owl-testimonial m-0" data-plugin-options='{"singleItem": true, "autoPlay": 3500, "navigation": false, "pagination": true, "transitionStyle":"fade"}'>
 						<div class="testimonial">
 							<figure>
-								<img class="rounded" src="demo_files/images/people/300x300/11-min.jpg" alt="" />
+								<img class="rounded" src="demo_files/images/RE12.png" alt="" />
 							</figure>
 							<div class="testimonial-content p-0">
-								<p class="lead">Incidunt deleniti blanditiis quas aperiam recusandae consequatur ullam quibusdam cum libero.</p>
+								<p class="lead">Rocket Elevators' C.E.O.</p>
 								<cite>
-									Joana Doe
-									<span>Company Ltd.</span>
+									David Amyot
+									<span>Rocket Elevators.</span>
 								</cite>
 							</div>
 						</div>
 						<div class="testimonial">
 							<figure>
-								<img class="rounded" src="demo_files/images/people/300x300/12-min.jpg" alt="" />
+								<img class="rounded" src="demo_files/images/RE13.jpg" alt="" />
 							</figure>
 							<div class="testimonial-content p-0">
-								<p class="lead">Quod necessitatibus quis expedita harum provident eos obcaecati id culpa.</p>
+								<p class="lead">This month's best employee at Rocket Elevators.</p>
 								<cite>
-									Melissa Doe
-									<span>Company Ltd.</span>
+									Émile Bérubé
+									<span>Rocket Elevators.</span>
 								</cite>
 							</div>
 						</div>
