--- a/Smarty/HTML_BS4/index-onepage-construction.html
+++ b/Smarty/HTML_BS4/index-onepage-construction.html
@@ -424,7 +424,7 @@
 
 							<h3 class="mt-10">Our Projects and Awards</h3>
 							<p>Rocket Elevators is a company that won a numerous amount of awards! We also worked in many major projects.</p>
-							<a href="#" class="btn btn-info">READ MORE</a>
+							<a href="#" class="btn btn-default">READ MORE</a>
 						</div>
 
 						<div class="col-sm-4">
@@ -436,7 +436,7 @@
 							</a>
 							<h3 class="mt-10">Residential Buildings</h3>
 							<p>Our company offers many different types of services, you can read more about our residential buildings assistance right down below!</p>
-							<a href="#" class="btn btn-info">READ MORE</a>
+							<a href="#" class="btn btn-default">READ MORE</a>
 						</div>
 
 						<div class="col-sm-4">
@@ -448,7 +448,7 @@
 							</a>
 							<h3 class="mt-10">Corporate Buildings</h3>
 							<p>Our company offers many different types of services, you can read more about our corporate buildings assistance right down below!</p>
-							<a href="#" class="btn btn-info">READ MORE</a>
+							<a href="#" class="btn btn-default">READ MORE</a>
 						</div>
 
 						
@@ -470,7 +470,7 @@
 
 					<div class="text-center">
 						<h2 class="fs-40 fw-300"> Elevators for Innovative Buildings Since 1976</h2>
-						<a class="btn btn-info btn-lg" href="#">REQUEST A QUOTE <i class="fa fa-angle-right"></i></a> 
+						<a class="btn btn-default btn-lg" href="#">REQUEST A QUOTE <i class="fa fa-angle-right"></i></a> 
 						&nbsp; OR &nbsp; 
 						<a class="btn btn-danger btn-lg" href="#">CONTACT US<i class="fa fa-angle-right"></i></a>
 					</div>
@@ -833,7 +833,7 @@
 								<img class="rounded" src="demo_files/images/RE13.jpg" alt="" />
 							</figure>
 							<div class="testimonial-content p-0">
-								<p class="lead">This month's best employee at Rocket Elevators.</p>
+								<p class="lead">This month's best employee at Rocket</p>
 								<cite>
 									Émile Bérubé
 									<span>Rocket Elevators.</span>
@@ -1055,7 +1055,7 @@
 					<ul class="row clients-dotted list-inline">
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/brands/1.jpg" alt="client" />
+								<img class="img-fluid" src="demo_files/images/brands/1.jpg" width='100' height='50' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
@@ -1091,6 +1091,26 @@
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
 								<img class="img-fluid" src="demo_files/images/brands/8.jpg" alt="client" />
+							</a>
+						</li>
+						<li class="col-md-3 col-sm-3 col-6">
+							<a href="#">
+								<img class="img-fluid" src="demo_files/images/brands/1.jpg" width='100' height='50' alt="client" />
+							</a>
+						</li>
+						<li class="col-md-3 col-sm-3 col-6">
+							<a href="#">
+								<img class="img-fluid" src="demo_files/images/brands/1.jpg" width='100' height='50' alt="client" />
+							</a>
+						</li>
+						<li class="col-md-3 col-sm-3 col-6">
+							<a href="#">
+								<img class="img-fluid" src="demo_files/images/brands/1.jpg" width='100' height='50' alt="client" />
+							</a>
+						</li>
+						<li class="col-md-3 col-sm-3 col-6">
+							<a href="#">
+								<img class="img-fluid" src="demo_files/images/brands/1.jpg" width='100' height='50' alt="client" />
 							</a>
 						</li>
 					</ul>
