added and removed portfolio layout

--- a/Smarty/HTML_BS4/index-onepage-construction.html
+++ b/Smarty/HTML_BS4/index-onepage-construction.html
@@ -380,7 +380,7 @@
 								data-endelementdelay="0.1"
 								data-endspeed="500"
 								style="z-index: 4; max-width: auto;">
-									<a class="btn btn-info btn-lg" href="#">SERVICE DETAILS &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-default btn-lg" href="#">SERVICE DETAILS &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 						
 
@@ -518,11 +518,6 @@
 													<span class="fa fa-plus fs-20"></span>
 												</a>
 
-												<!-- details -->
-												<a class="ico-rounded lightbox" href="ajax/portfolio-detail-modal-6.html" data-plugin-options='{"type":"ajax", "closeOnBgClick":false}'>
-													<span class="glyphicon glyphicon-option-horizontal fs-20"></span>
-												</a>
-
 											</span>
 										</span>
 
@@ -555,9 +550,97 @@
 													<span class="fa fa-plus fs-20"></span>
 												</a>
 
-												<!-- details -->
-												<a class="ico-rounded lightbox" href="ajax/portfolio-detail-modal-6.html" data-plugin-options='{"type":"ajax", "closeOnBgClick":false}'>
-													<span class="glyphicon glyphicon-option-horizontal fs-20"></span>
+											</span>
+										</span>
+
+										<img class="img-fluid" src="demo_files/images/thematics/construction/w2-min.jpg" width="600" height="399" alt="">
+									</figure>
+
+									<div class="item-box-desc">
+										<h3>Speaker Design</h3>
+										<ul class="list-inline categories m-0">
+											<li><a href="#">Audio</a></li>
+											<li><a href="#">Design</a></li>
+										</ul>
+									</div>
+
+								</div>
+
+							</div><!-- /item -->
+
+							<div class="col-md-3 col-sm-3 mix development"><!-- item -->
+
+								<div class="item-box">
+									<figure>
+										<span class="item-hover">
+											<span class="overlay dark-5"></span>
+											<span class="inner">
+
+												<!-- lightbox -->
+												<a class="ico-rounded lightbox" href="demo_files/images/thematics/construction/w2-min.jpg" data-plugin-options='{"type":"image"}'>
+													<span class="fa fa-plus fs-20"></span>
+												</a>
+
+											</span>
+										</span>
+
+										<img class="img-fluid" src="demo_files/images/thematics/construction/w2-min.jpg" width="600" height="399" alt="">
+									</figure>
+
+									<div class="item-box-desc">
+										<h3>Speaker Design</h3>
+										<ul class="list-inline categories m-0">
+											<li><a href="#">Audio</a></li>
+											<li><a href="#">Design</a></li>
+										</ul>
+									</div>
+
+								</div>
+
+							</div><!-- /item -->
+
+							<div class="col-md-3 col-sm-3 mix development"><!-- item -->
+
+								<div class="item-box">
+									<figure>
+										<span class="item-hover">
+											<span class="overlay dark-5"></span>
+											<span class="inner">
+
+												<!-- lightbox -->
+												<a class="ico-rounded lightbox" href="demo_files/images/thematics/construction/w2-min.jpg" data-plugin-options='{"type":"image"}'>
+													<span class="fa fa-plus fs-20"></span>
+												</a>
+
+											</span>
+										</span>
+
+										<img class="img-fluid" src="demo_files/images/thematics/construction/w2-min.jpg" width="600" height="399" alt="">
+									</figure>
+
+									<div class="item-box-desc">
+										<h3>Speaker Design</h3>
+										<ul class="list-inline categories m-0">
+											<li><a href="#">Audio</a></li>
+											<li><a href="#">Design</a></li>
+										</ul>
+									</div>
+
+								</div>
+
+							</div><!-- /item -->
+
+							<div class="col-md-3 col-sm-3 mix development"><!-- item -->
+
+								<div class="item-box">
+									<figure>
+										<span class="item-hover">
+											<span class="overlay dark-5"></span>
+											<span class="inner">
+
+												<!-- lightbox -->
+												<a class="ico-rounded lightbox" href="demo_files/images/thematics/construction/w2-min.jpg" data-plugin-options='{"type":"image"}'>
+													<span class="fa fa-plus fs-20"></span>
 												</a>
 
 											</span>
@@ -592,9 +675,35 @@
 													<span class="fa fa-plus fs-20"></span>
 												</a>
 
-												<!-- details -->
-												<a class="ico-rounded lightbox" href="ajax/portfolio-detail-modal-4.html" data-plugin-options='{"type":"ajax", "closeOnBgClick":false}'>
-													<span class="glyphicon glyphicon-option-horizontal fs-20"></span>
+											</span>
+										</span>
+
+										<img class="img-fluid" src="demo_files/images/thematics/construction/w3-min.jpg" width="600" height="399" alt="">
+									</figure>
+
+									<div class="item-box-desc">
+										<h3>Mobile Development</h3>
+										<ul class="list-inline categories m-0">
+											<li><a href="#">Development</a></li>
+											<li><a href="#">Design</a></li>
+										</ul>
+									</div>
+
+								</div>
+
+							</div><!-- /item -->
+
+							<div class="col-md-3 col-sm-3 mix photography"><!-- item -->
+
+								<div class="item-box">
+									<figure>
+										<span class="item-hover">
+											<span class="overlay dark-5"></span>
+											<span class="inner">
+
+												<!-- lightbox -->
+												<a class="ico-rounded lightbox" href="demo_files/images/thematics/construction/w3-min.jpg" data-plugin-options='{"type":"image"}'>
+													<span class="fa fa-plus fs-20"></span>
 												</a>
 
 											</span>
@@ -629,11 +738,6 @@
 													<span class="fa fa-plus fs-20"></span>
 												</a>
 
-												<!-- details -->
-												<a class="ico-rounded" href="portfolio-single-slider.html">
-													<span class="glyphicon glyphicon-option-horizontal fs-20"></span>
-												</a>
-
 											</span>
 										</span>
 
@@ -664,11 +768,6 @@
 												<!-- lightbox -->
 												<a class="ico-rounded lightbox" href="demo_files/images/thematics/construction/w5-min.jpg" data-plugin-options='{"type":"image"}'>
 													<span class="fa fa-plus fs-20"></span>
-												</a>
-
-												<!-- details -->
-												<a class="ico-rounded" href="portfolio-single-slider.html">
-													<span class="glyphicon glyphicon-option-horizontal fs-20"></span>
 												</a>
 
 											</span>
@@ -703,11 +802,6 @@
 													<span class="fa fa-plus fs-20"></span>
 												</a>
 
-												<!-- details -->
-												<a class="ico-rounded" href="portfolio-single-slider.html">
-													<span class="glyphicon glyphicon-option-horizontal fs-20"></span>
-												</a>
-
 											</span>
 										</span>
 
@@ -740,11 +834,6 @@
 													<span class="fa fa-plus fs-20"></span>
 												</a>
 
-												<!-- details -->
-												<a class="ico-rounded" href="portfolio-single-slider.html">
-													<span class="glyphicon glyphicon-option-horizontal fs-20"></span>
-												</a>
-
 											</span>
 										</span>
 
@@ -775,11 +864,6 @@
 												<!-- lightbox -->
 												<a class="ico-rounded lightbox" href="demo_files/images/thematics/construction/w8-min.jpg" data-plugin-options='{"type":"image"}'>
 													<span class="fa fa-plus fs-20"></span>
-												</a>
-
-												<!-- details -->
-												<a class="ico-rounded" href="portfolio-single-slider.html">
-													<span class="glyphicon glyphicon-option-horizontal fs-20"></span>
 												</a>
 
 											</span>
@@ -996,44 +1080,6 @@
 								</li>
 							</ul>
 						</div>
-						<div class="img-hover">
-							<a href="blog-single-default.html">
-								<img class="img-fluid" src="demo_files/images/451x300/37-min.jpg" alt="">
-							</a>
-							<h4 class="text-left mt-20"><a href="blog-single-default.html">Lorem Ipsum Dolor</a></h4>
-							<p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, asperiores quod est tenetur in.</p>
-							<ul class="text-left fs-12 list-inline list-separator">
-								<li>
-									<i class="fa fa-calendar"></i> 
-									29th Jan 2017
-								</li>
-								<li>
-									<a href="blog-single-default.html#comments">
-										<i class="fa fa-comments"></i> 
-										3
-									</a>
-								</li>
-							</ul>
-						</div>
-						<div class="img-hover">
-							<a href="blog-single-default.html">
-								<img class="img-fluid" src="demo_files/images/451x300/23-min.jpg" alt="">
-							</a>
-							<h4 class="text-left mt-20"><a href="blog-single-default.html">Lorem Ipsum Dolor</a></h4>
-							<p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, asperiores quod est tenetur in.</p>
-							<ul class="text-left fs-12 list-inline list-separator">
-								<li>
-									<i class="fa fa-calendar"></i> 
-									29th Jan 2017
-								</li>
-								<li>
-									<a href="blog-single-default.html#comments">
-										<i class="fa fa-comments"></i> 
-										3
-									</a>
-								</li>
-							</ul>
-						</div>
 					</div>
 
 				</div>
@@ -1049,68 +1095,68 @@
 				<div class="container">
 
 					<div class="heading-title heading-dotted text-center">
-						<h2>Our Clients</h2>
+						<h2>Our Customers</h2>
 					</div>
 
 					<ul class="row clients-dotted list-inline">
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/brands/1.jpg" width='100' height='50' alt="client" />
+								<img class="img-fluid" src="demo_files/images/Amazon_icon.svg.png" width='100' height='50' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/brands/2.jpg" alt="client" />
+								<img class="img-fluid" src="demo_files/images/apple-logo-png-dallas-shootings-don-add-are-speech-zones-used-4.png" width='100' height='50' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/brands/3.jpg" alt="client" />
+								<img class="img-fluid" src="demo_files/images/bmw-logo-1-1.png" width='100' height='50' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/brands/4.jpg" alt="client" />
+								<img class="img-fluid" src="demo_files/images/facebook-logo-icon-facebook-icon-png-images-icons-and-png-backgrounds-1.png" width='100' height='50' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/brands/5.jpg" alt="client" />
+								<img class="img-fluid" src="demo_files/images/meta.png" width='100' height='50' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/brands/6.jpg" alt="client" />
+								<img class="img-fluid" src="demo_files/images/Microsoft-Logo.png" width='100' height='50' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/brands/7.jpg" alt="client" />
+								<img class="img-fluid" src="demo_files/images/nike.png" width='100' height='50' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/brands/8.jpg" alt="client" />
+								<img class="img-fluid" src="demo_files/images/nissan.png" width='200' height='100' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/brands/1.jpg" width='100' height='50' alt="client" />
+								<img class="img-fluid" src="demo_files/images/porsche.webp" width='100' height='50' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/brands/1.jpg" width='100' height='50' alt="client" />
+								<img class="img-fluid" src="demo_files/images/Nvidia_logo.svg.png" width='100' height='50' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/brands/1.jpg" width='100' height='50' alt="client" />
+								<img class="img-fluid" src="demo_files/images/Tesla_logo.png" width='100' height='50' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/brands/1.jpg" width='100' height='50' alt="client" />
+								<img class="img-fluid" src="demo_files/images/google-logo-png-suite-everything-you-need-know-about-google-newest-0.png" width='100' height='50' alt="client" />
 							</a>
 						</li>
 					</ul>
