--- a/Smarty/HTML_BS4/index-onepage-construction.html
+++ b/Smarty/HTML_BS4/index-onepage-construction.html
@@ -208,7 +208,7 @@
 								data-endelementdelay="0.1"
 								data-endspeed="600"
 								style="z-index: 2; color:#fff; font-size:65px; line-height:85px; font-weight:bold; letter-spacing:0; text-shadow:none;">
-									A new way to rise high 
+									Elevate safety, speed and style 
 							</div>
 
 							<div class="tp-caption content_text_center skewfromleft tp-resizeme"
@@ -487,15 +487,15 @@
 				<div class="container">
 
 					<div class="heading-title heading-dotted text-center">
-						<h2>Featured Work</h2>
+						<h2>Our Portfolio</h2>
 					</div>
 
 					<div class="text-center">
 						<ul class="nav nav-pills mix-filter mb-60">
 							<li data-filter="all" class="filter active"><a href="#">All</a></li>
-							<li data-filter="development" class="filter"><a href="#">Development</a></li>
-							<li data-filter="photography" class="filter"><a href="#">Photography</a></li>
-							<li data-filter="design" class="filter"><a href="#">Design</a></li>
+							<li data-filter="development" class="filter"><a href="#">Residential</a></li>
+							<li data-filter="photography" class="filter"><a href="#">Corporate</a></li>
+							<li data-filter="design" class="filter"><a href="#">Prizes</a></li>
 						</ul>
 					</div>
 
@@ -853,7 +853,7 @@
 							</div><!-- /item -->
 
 
-							<div class="col-md-3 col-sm-3 mix design"><!-- item -->
+							<div class="col-md-3 col-sm-3 mix photography"><!-- item -->
 
 								<div class="item-box">
 									<figure>
@@ -862,21 +862,21 @@
 											<span class="inner">
 
 												<!-- lightbox -->
-												<a class="ico-rounded lightbox" href="demo_files/images/thematics/construction/w8-min.jpg" data-plugin-options='{"type":"image"}'>
+												<a class="ico-rounded lightbox" href="demo_files/images/thematics/construction/w3-min.jpg" data-plugin-options='{"type":"image"}'>
 													<span class="fa fa-plus fs-20"></span>
 												</a>
 
 											</span>
 										</span>
 
-										<img class="img-fluid" src="demo_files/images/thematics/construction/w8-min.jpg" width="600" height="399" alt="">
+										<img class="img-fluid" src="demo_files/images/thematics/construction/w3-min.jpg" width="600" height="399" alt="">
 									</figure>
 
 									<div class="item-box-desc">
-										<h3>Nature Art</h3>
+										<h3>Mobile Development</h3>
 										<ul class="list-inline categories m-0">
-											<li><a href="#">Nature</a></li>
-											<li><a href="#">Art</a></li>
+											<li><a href="#">Development</a></li>
+											<li><a href="#">Design</a></li>
 										</ul>
 									</div>
 
